# Bachelor-Project-2023

./: .gitignore  CITATION.cff  CMakeLists.txt  NOTES.md  README.md  flower.xcf  flower_base.xcf  rotateSerial.py  scaletta.md
CudaLearn/: a.out  main.cu
CudaLearn/vectorAdd/: a.out  main.cu
FourierShift_MakeFile/core/: Makefile  convolution.c  convolution.h  convolution.py  filter.raw  fourier_filter.c  fourier_filter.h  main.c  original_filter.raw  original_signal.raw  scaletta.md  shifted_signal.raw  test
FourierShift_MakeFile/drivers/: run.sh
FourierShift_MakeFile/python/: signal_io.py
Images/: circular_symmetric.raw  data_rectangle.raw  wrapped_sinusoid.raw
Poster/: .~lock.BacheprProjectPoster.pptx#  BacheprProjectPoster.pptx  final.xcf  flower_agaion.xcf  flower_base.xcf  ~$BacheprProjectPoster.pptx
Report/: file.aux  project-report-2.aux  project-report-2.tex  project-report-2.toc  project_report.aux  project_report.bbl  project_report.blg  project_report.ilg  project_report.tex  project_report.toc  references.bib  usiinfbachelorproject.cls
Report/pdf's/: non_fractional_shift.aux  non_fractional_shift.tex
RotateCuda/: rotateKernel.cu  rotateNoLossKernel.cu
RotateSerial/: CMakeLists.txt  basic_rotate.py  main.c  plot_image.py  rotateSerial.py
RotateSerial/c/: CMakeLists.txt
RotateSerial/c/core/: CMakeLists.txt  basic_rotate.h  basic_rotate.hpp  read-png.h  read_png.h  rpng.h  run.sh
RotateSerial/c/drivers/: image_io.py  main.c  main.cpp  read_raw_image.py  rotate_loss.c  rotate_noloss.c
RotateSerial/c/scripts/: run_c_rotate.sh
RotateSerial/core/: basic_rotate.h  basic_rotate.hpp  convolution.h  fourier_filter.h  interpolants.h  interpolate.h  posix-util.h
RotateSerial/drivers/: interpolate.c  interpolate.h  main.cpp  rotate_loss.c  rotate_noloss.c  shift_fourier.c
RotateSerial/python/: basic_rotate.py  convolution.py  plot_basic.py  plot_image.py
cmake/: BachelorFunctions.cmake  BachelorOptions.cmake
makefile_crashcourse/shift-signal/dconv/: .Makefile.swp  Makefile  away-dconv.c  dconv.c  dconv.h  dconv.py  filter.c  filter.h  main.c  result.raw  test
notebook/: Untitled.ipynb  dft.ipynb  direct_convolution.ipynb  direct_convolution_2.py  filter.ipynb  fourier.ipynb  fourier_1.ipynb  fourier_image.ipynb  fractional-shift-2.ipynb  fractional-shift.ipynb  help_report.ipynb  lanczos.ipynb  non_fractional_shift.ipynb  run_shift_fourier.sh  sympy_integral.py
scripts/: run_rotate_cuda.sh  run_rotate_serial.sh
scripts/python/: fourier.py  fourier_2.py  fourier_3.py  fourier_rotation_git.py  image_io.py  interp_test.py  interpolation.py  plot_image.py  signal_io.py  translate_test.py
title_slides/: title.tex
